--- a/C_Practice/C_Practice.vcxproj.filters
+++ b/C_Practice/C_Practice.vcxproj.filters
@@ -27,5 +27,14 @@
     <ClCompile Include="operater_base.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="operater_app.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="control.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="interation.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
