--- a/C_Practice/C_Practice.vcxproj
+++ b/C_Practice/C_Practice.vcxproj
@@ -127,8 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="array.c" />
+    <ClCompile Include="array_use.c" />
     <ClCompile Include="control.c" />
     <ClCompile Include="data_type_practice.c" />
+    <ClCompile Include="function.c" />
     <ClCompile Include="HelloWorld_Practice.c" />
     <ClCompile Include="interation.c" />
     <ClCompile Include="IO.C" />
