--- a/C_Practice/C_Practice.vcxproj.filters
+++ b/C_Practice/C_Practice.vcxproj.filters
@@ -36,5 +36,14 @@
     <ClCompile Include="interation.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="array.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="array_use.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="function.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
