--- a/C_Practice/C_Practice.vcxproj
+++ b/C_Practice/C_Practice.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="control.c" />
     <ClCompile Include="data_type_practice.c" />
     <ClCompile Include="function.c" />
+    <ClCompile Include="func_app.c" />
     <ClCompile Include="HelloWorld_Practice.c" />
     <ClCompile Include="interation.c" />
     <ClCompile Include="IO.C" />
