--- a/C_Practice/C_Practice.vcxproj.filters
+++ b/C_Practice/C_Practice.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="pointer2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="func_app.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
