--- a/C_Practice/C_Practice.vcxproj
+++ b/C_Practice/C_Practice.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="operater_base.c" />
     <ClCompile Include="pointer.c" />
     <ClCompile Include="pointer2.c" />
+    <ClCompile Include="struct.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
